# pyshiro

./: .gitignore  .gitmodules  README.en.md  README.md  pyproject.toml
checkpoint/: pyshiro-jp-v1.hsmm  pyshiro-jp-v1_phonemap.json
example/cut_wav/: akai_kutsu_cuts.json  amehuri_cuts.json
example/labels/: akai_kutsu_s001.TextGrid  akai_kutsu_s002.TextGrid  akai_kutsu_s003.TextGrid  amehuri_s001.TextGrid  amehuri_s002.TextGrid  amehuri_s003.TextGrid  put_your_labels_here.txt
example/lyrics/: akai_kutsu_s001.txt  akai_kutsu_s002.txt  akai_kutsu_s003.txt  amehuri_s001.txt  amehuri_s002.txt  amehuri_s003.txt
example/output/: akai_kutsu.lab  amehuri.lab
example/wav_16k/: put_your_wavs_here.txt
input_example/kiritan_01/: kiritan_01_s001.txt  kiritan_01_s002.txt  kiritan_01_s003.txt  kiritan_01_s004.txt  kiritan_01_s005.txt  kiritan_01_s006.txt  kiritan_01_s007.txt
input_example/wav/: put_your_wav_here.txt
pyshiro/: __init__.py  align.py  features.py  labels.py  model.py  phonemes.py  train.py  untie.py
pyshiro/data/: kana2phonemes.table
tests/: plot_alignment.py  test_align.py  test_features.py
workflow/: 00_resample.py  01_cut.py  02_align.py  03_merge.py  annotation_guide.ipynb
